# cepd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: address.rs  client.rs  error.rs  handler.rs  lib.rs  main.rs  server.rs  sled.rs  storage.rs  viacep.rs
src/cepd_cache/: db
src/client/: mod.rs  viacep.rs
src/storage/: mod.rs  sled.rs
