[package]
name = "cepd"
version = "0.1.0"
authors = ["Murilo Santana <mvrilo@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
sled = { version = "0.34.7" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { version = "0.11" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.73"
warp = { version = "0.3" }
bincode = "1.2.1"
thiserror = "1.0"
axum = { version = "0.6.20", features = ["tracing", "headers", "macros"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
clap = { version = "4.3.23", features = ["default", "derive"] }
hyper = "0.14.27"
tower-http = { version = "0.4.3", features = ["tracing", "metrics", "request-id", "tokio", "add-extension", "trace"] }
serde_json = "1.0.105"

[features]
